# classic-falcon-integration

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
sources/classic/falcon_integration/: __init__.py  error_handlers.py  registration.py  serialization.py  specification.py
sources/classic/falcon_integration/authentication/: base.py  jwt_.py
